--- a/experiment/style.css
+++ b/experiment/style.css
@@ -1,17 +1,86 @@
-.slide {
-	padding: 10px;
-	margin: 10px auto 10px auto;
-	text-align: center;
-	font-size: 20px;
-	font-family: "Bookman Old Style", Bookman, serif;
-	color: rgb(200, 180, 220);
-	position: relative;
+/*general style*/
+
+/*disable text selection*/
+body {
+  -webkit-user-select: none;
+     -moz-user-select: -moz-none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
-#start {
+/*general styling for slides*/
+.slide {
+	padding: 30px;
+	margin: 10px auto 10px auto;
+    border: 5px solid;
+    width: 800px;
+    font-size: 14px;
+    text-align: center;
+}
+
+/*text styles*/
+#title-text {
+	font-size: 28px;
+	color: darkred;
+	margin-bottom: 20px;
+}
+
+p.fun-text {
+	font-size: 20px;
+	color: rgb(250, 90, 0);
+	margin: 20px auto 20px auto;
+}
+
+p.legal {
+	text-align: justify;
+	font-size: 10px;
+	/*font-style: italic;*/
+}
+
+.survey-descrip {
+    width: 600px;
+    margin: 10px auto 10px auto;
+    text-align: justify;
+}
+
+/*buttons*/
+.btn {
+	background-color: rgb(240, 240, 240);
+	/*font-family: "Bookman Old Style", Bookman, serif;*/
+	/*color: rgb(240, 220, 260);*/
+	font-size: 16px;
+	padding: 6px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+	border: none;
+	margin: 5px;
+}
+
+.btn:hover {
+	background-color: rgba(250, 90, 0, .2);
+}
+
+button:focus {
+	outline:0 !important;
+}
+
+/*headers & footers*/
+.header, .footer {
+	margin: 0 auto 0 auto;
+}
+
+
+
+
+
+
+
+/*from kid study...*/
+/*#start {
 	padding-top: 200px;
 	padding-bottom: 200px;
-}
+}*/
 
 .session-info {
 	padding: 500px auto 500px auto;
@@ -30,16 +99,16 @@ tr {
 	margin: 0;
 }
 
-p.fun-text {
+/*p.fun-text {
 	font-size: 80px;
 	color: rgb(250, 90, 0);
 	margin-top: 10px;
 	margin-bottom: 10px;
 	-webkit-margin-before: 0;
 	-webkit-margin-after: 0;
-}
+}*/
 
-p.instructions1 {
+/*p.instructions1 {
 	width: 30%;
 	margin: 150px auto 10px auto;
 	text-align: justify;
@@ -50,7 +119,7 @@ p.instructions2 {
 	margin: 10px auto 150px auto;
 	text-align: center;
 	font-size: 40px;
-}
+}*/
 
 img {
 	border: 2px solid black;
@@ -61,23 +130,6 @@ img {
 
 img#endingpic {
 	width: 500px;
-}
-
-.btn {
-	background-color: rgb(250,250,250);
-	font-family: "Bookman Old Style", Bookman, serif;
-	color: rgb(240, 220, 260);
-	font-size: 16px;
-	padding: 6px;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
-	border: none;
-	margin: 5px;
-}
-
-button:focus {
-	outline:0 !important;
 }
 
 .session-info {
@@ -109,13 +161,6 @@ input:focus {
 	outline:0 !important;
 }
 
-.header {
-	margin: 0 auto 60px auto;
-}
-
-.footer {
-	margin: 80px auto 20px auto;
-}
 
 /*progress bar stuff from bootstrap css*/
 .progress{
