--- a/experiment/style.css
+++ b/experiment/style.css
@@ -138,7 +138,7 @@ img#endingpic {
 }
 
 .controls {
-	text-align: right;
+	/*text-align: right;*/
 	font-size: 12px;
 	width: 260px;
 	margin: auto;
