--- a/experiment/style.css
+++ b/experiment/style.css
@@ -43,6 +43,12 @@ p.legal {
     text-align: justify;
 }
 
+.progress-text {
+	text-align: center;
+	font-style: italic;
+	font-size: 12px;
+}
+
 #question-text {
 	font-weight: bold;
 }
@@ -78,7 +84,7 @@ button:focus {
 img {
 	border: 2px solid black;
 	width: 500px;
-	margin-top: 10px;
+	margin-top: 30px;
 	margin-bottom: 10px
 }
 
