--- a/experiment/style.css
+++ b/experiment/style.css
@@ -53,11 +53,17 @@ p.legal {
 	font-weight: bold;
 }
 
+.slide#demographics form {
+	text-align: left;
+}
+
+form .question-label {
+	margin: 10px auto 0px auto;
+}
+
 /*buttons*/
 .btn {
 	background-color: rgb(240, 240, 240);
-	/*font-family: "Bookman Old Style", Bookman, serif;*/
-	/*color: rgb(240, 220, 260);*/
 	font-size: 16px;
 	padding: 8px;
     -moz-border-radius: 10px;
@@ -80,6 +86,11 @@ button:focus {
 	outline:0 !important;
 }
 
+.slide#demographics button, .btn, .button {
+	margin: 10px auto 10px auto;
+	text-align: center;
+}
+
 /*images*/
 img {
 	border: 2px solid black;
@@ -96,7 +107,6 @@ img#endingpic {
 /*inputs*/
 input {
 	background-color: rgb(250,250,250);
-	font-family: "Bookman Old Style", Bookman, serif;
 	color: rgb(250, 90, 0);
 	font-size: 12px;
 	padding: 6px;
